@@ -18,7 +18,7 @@
    +----------------------------------------------------------------------+
 */
 
-/* $Id: main.c,v 1.640.2.19 2006/03/13 09:35:45 dmitry Exp $ */
+/* $Id: main.c,v 1.640.2.20 2006/03/14 15:16:07 dmitry Exp $ */
 
 /* {{{ includes
  */
@@ -1593,6 +1593,10 @@ void php_module_shutdown(TSRMLS_D)
 	if (!module_initialized) {
 		return;
 	}
+
+#ifdef ZTS
+	ts_free_worker_threads();
+#endif
 
 #if defined(PHP_WIN32) || (defined(NETWARE) && defined(USE_WINSOCK))
 	/*close winsock */
